# mrt-flightradar

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deploy.sh  index.html  rocket.toml
.github/: dependabot.yml
.github/workflows/: build-server.yml  pages.yml  raw-data-updater.yml  test.yml
assets/: index-3cda2858.js  index-673093ea.js  index-DCn_F_TI.css  index-DX_n7v02.js  index-ad1f48c8.css  index-e8e59bdc.css  index-ffe42b19.js  index.2847224f.js  index.468efb96.js  index.6544416d.js  index.6dc0e874.js  index.8e62654d.js  index.a0daa1db.js  index.a0fe5c55.js  index.b76f3f50.css  index.c9bd036f.js  index.cfbeb7ce.js  index.dcfb3f31.js  index.e2539e70.js
client/: .prettierignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: actions.ts  get-msgpack.ts  index.ts  load-data.ts  main.ts  map.ts  panel.ts  route.ts  select-airport.ts  select-plane.ts
client/src/css/: index.scss  style.scss  styles.ts
data/: air_facilities.csv  airport_names.txt  airway_coords.json  raw_data  test-timetable.fpln  test-timetable.txt  waypoints.csv
mrt-flightradar-client/: Cargo.toml
mrt-flightradar-common/: Cargo.toml
mrt-flightradar-common/src/: flight_route.rs  lib.rs
mrt-flightradar-common/src/data_types/: airport.rs  airway.rs  mod.rs  time.rs  timetable.rs  vec.rs  waypoint.rs
mrt-flightradar-common/src/flight_route/: between_waypoints.rs  flight_path.rs  mod.rs  waypoint_route.rs
mrt-flightradar-common/src/flight_route/types/: iter.rs  mod.rs  path.rs
mrt-flightradar-common/src/types/: airport.rs  iter.rs  mod.rs  timetable.rs  waypoint.rs
mrt-flightradar-data-updater/: Cargo.toml
mrt-flightradar-data-updater/src/: generate_airways.rs  get_air_facilities.rs  get_waypoints.rs  main.rs
mrt-flightradar-server/: Cargo.toml
mrt-flightradar-server/src/: flight_generation.rs  main.rs  purge.rs  status_calculation.rs  types_consts.rs
mrt-flightradar-timetable-editor/: Cargo.toml
mrt-flightradar-timetable-editor/src/: airport_names.rs  cmds.rs  main.rs
mrt-flightradar-timetable-editor/src/cmds/: c.rs  d.rs  e.rs  h.rs  i.rs  ie.rs  is.rs  m.rs  n.rs  q.rs  sa.rs  sae.rs  sas.rs  sd.rs
src/: flight_route.rs  main.rs
src/flight_route/: mod.rs  types.rs
src/types/: airport.rs  mod.rs  path.rs  vec.rs  waypoint.rs
