[package]
name = "mrt-flightradar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10.5"
glam = "^0.21.3"
smallvec = "^1.9.0"
smol_str = "^0.1.23"
anyhow = { version = "^1.0.65", features = ['backtrace'] }
cached = "^0.39.0"