[package]
name = "mrt-flightradar-common"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.11.0"
glam = { version = "^0.24.1", features = ['serde'] }
rand = "^0.8.5"
smallvec = { version = "^1.10.0", features = ['serde'] }
smol_str = { version = "^0.2.0", features = ['serde'] }
color-eyre = "^0.6.2"
cached = "^0.44.0"
regex = "^1.8.4"
once_cell = "^1.18.0"
serde = { version = "^1.0.164", features = ['derive'] }
rmp-serde = "^1.1.1"

tracing = "^0.1.37"

[dev-dependencies]
proptest = { git = "https://github.com/nzeh/proptest" }
