[package]
name = "mrt-flightradar-data-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../mrt-flightradar-common", package = "mrt-flightradar-common" }
reqwest = { version = "^0.11.12", features = ["blocking"] }
anyhow = { version = "^1.0.65", features = ["backtrace"] }
smallvec = "^1.10.0"
itertools = "^0.10.5"
rmp-serde = "^1.1.1"
serde_json = "^1.0.86"
