[package]
name = "mrt-flightradar-data-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../mrt-flightradar-common", package = "mrt-flightradar-common" }
reqwest = { version = "^0.11.18", features = ["blocking"] }
color-eyre = "^0.6.2"
smallvec = "^1.10.0"
itertools = "^0.11.0"
rmp-serde = "^1.1.1"
serde_json = "^1.0.99"

tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
