[package]
name = "mrt-flightradar-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../mrt-flightradar-common", package = "mrt-flightradar-common" }
rocket = { version = "^0.5.0-rc.2", features = ["msgpack", "json"] }
color-eyre = "^0.6.2"
tokio = { version = "^1.21.2", features = ["full"] }
smol_str = "^0.1.23"
once_cell = "^1.15.0"
rand = "^0.8.5"
glam = { version = "^0.21.3", features = ["serde"]}
serde = { version = "^1.0.145", features = ["rc"] }
rmp-serde = "^1.1.1"
uuid = { version = "^1.2.1", features = ["v4", "serde", "fast-rng"] }

tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
tracing-log = "^0.1.3"
