[package]
name = "mrt-flightradar-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../mrt-flightradar-common", package = "mrt-flightradar-common" }
rocket = { version = "^0.5.0-rc.3", features = ["msgpack", "json"] }
color-eyre = "^0.6.2"
tokio = { version = "^1.29.1", features = ["full"] }
smol_str = { version = "^0.2.0", features = ["serde"] }
once_cell = "^1.18.0"
rand = "^0.8.5"
glam = { version = "^0.24.1", features = ["serde"]}
serde = { version = "^1.0.164", features = ["rc"] }
rmp-serde = "^1.1.1"
uuid = { version = "^1.4.0", features = ["v4", "serde", "fast-rng"] }

tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
tracing-log = "^0.1.3"
