[package]
name = "mrt-flightradar-timetable-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../mrt-flightradar-common", package = "mrt-flightradar-common" }
rustyline = "^12.0.0"
color-eyre = "^0.6.2"
itertools = "^0.11.0"
bunt = "^0.2.8"
smol_str = "^0.2.0"
native-dialog = "^0.6.4"
glam = "^0.24.1"
regex = "^1.8.4"
